[project]
name = "langgggtest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.30.0",
    "langchain>=0.3.27",
    "langchain-cohere>=0.4.5",
    "langchain-community>=0.3.27",
    "langchain-groq>=0.3.6",
    "langchain-openai>=0.3.30",
    "langgraph>=0.6.2",
]
